--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id="user_nav">
+  <%= link_to "Sign in with GitHub", "/auth/github"%>
+</div>
 
 <%= yield %>
 
