--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,18 @@
 </head>
 <body>
 <div id="user_nav">
-  <%= link_to "Sign in with GitHub", "/auth/github"%>
+  <% if current_user %>
+    Signed in as <%= current_user.name %>!
+    <%= link_to "Sign out", signout_path %>
+  <% else %>
+    <%= link_to "Sign in with GitHub", "/auth/github"%>
+  <% end %>
 </div>
-
+<!-- <div class="notice"><%= notice %></div>
+<div class="alert"><%= alert %></div> -->
+<% flash.each do |name, msg| %>
+  <%= content_tag :div, msg, id: "flash_#{name}" %>
+<% end %>
 <%= yield %>
 
 </body>
