--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome to Tech Interview Tips</h1>
+<div class="row">
+  <div class="small-8 columns">
+    <h1>Welcome to Tech Interview Tips</h1>
+  </div>
+</div>
