--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -3,5 +3,5 @@
   <%= f.text_field :title %>
   <%= f.label :content %>
   <%= f.text_area :content, size: "60x12" %>
-  <%= f.submit "Create" %>
-<%= end %>
+  <%= f.submit %>
+<% end %>
