Adds index, edit, update, destroy methods
  * Controller now has the above methods
  * View has edit and index pages
  * Show has links to edit/delete question

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,2 +1,5 @@
 <h1><%= @question.title %></h1>
 <p><%= @question.content %></p>
+
+<%= link_to "edit", edit_question_path(@question) %>
+<%= link_to "delete", question_path(@question), method: :delete %>
