Added link to All Questions on Nav Bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
           <li class="has-dropdown">
             <a href="#">Categories</a>
             <ul class="dropdown">
+              <li><%= link_to "All Questions", questions_path %></li>
               <li><a href="#">Ruby</a></li>
               <li><a href="#">Javascript</a></li>
               <li><a href="#">Logic</a></li>
