Styled edit page, added categories to nav bar
- Updated questions controller so the edit and delete work
- with friendly id

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,7 +1,24 @@
-<%= form_for @question do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :content %>
-  <%= f.text_area :content, size: "60x12" %>
-  <%= f.submit %>
-<% end %>
+
+<% content_for :title do %>Update Question<% end %>
+<div class="row">
+  <div class="small-12 large-12 columns panel">
+    <h1>Post a Question</h1>
+     <%= form_for @question do |f| %>
+     <div class="row">
+       <div class="small-12 large-12 columns">
+          <%= f.text_field :title %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 large-12 columns">
+          <%= f.text_area :content, size: "60x12" %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-12 large-12 columns">
+          <%= f.submit "Update Question", class: "button" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
