--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,10 +38,10 @@
             <a href="#">Categories</a>
             <ul class="dropdown">
               <li><%= link_to "All Questions", questions_path %></li>
-              <li><a href="#">Ruby</a></li>
-              <li><a href="#">Javascript</a></li>
-              <li><a href="#">Logic</a></li>
-              <li><a href="#">General</a></li>
+              <% @categories = Category.all %>
+              <% @categories.each do |category| %>
+                <li><%= link_to category.content, "#" %></li>
+              <% end %>
             </ul>
           </li>
         </ul>
