Adds ability to answer a question
  * Answer form added to question show page
  * Answer display loop added to question show page
  * Create method on AnswerController updated

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -13,3 +13,18 @@
     <p class="text-right"><%= time_ago_in_words(@question.created_at) %> ago</p>
   </div>
 </div>
+
+<% @answers.each do |answer| %>
+  <%= answer.content %>
+<% end %>
+
+<% if current_user %>
+  <%= form_for @answer do |f| %>
+    <%= f.label :content %>
+    <%= f.text_area :content, placeholder: "Your answer" %>
+    <%= f.hidden_field :question_id, value: @question.id %>
+    <%= f.submit %>
+  <% end %>
+<% else %>
+  <p>Please log in to answer!</p>
+<% end %>
