Add the answers
  *Changed the association in order for answers to associate with question.id
  *added a break in between each answer in view

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 <% @answers.each do |answer| %>
-  <%= answer.content %>
+  <%= answer.content %><br>
 <% end %>
 
 <% if current_user %>
