--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -19,7 +19,7 @@
 <% end %>
 
 <% if current_user %>
-  <%= form_for @answer do |f| %>
+  <%= form_for Answer.new do |f| %>
     <%= f.label :content %>
     <%= f.text_area :content, placeholder: "Your answer" %>
     <%= f.hidden_field :question_id, value: @question.id %>
