--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   </head>
 
   <body>
+<!-- mobile menu -->
+
+<!-- end mobile menu -->
+
+
   <div class="contain-to-grid fixed">
     <nav class="top-bar" data-topbar>
       <ul class="title-area">
