Once a user clicks on an answer it goes to the individual answer
  *each answer is a link

--- a/app/views/answers/_new.html.erb
+++ b/app/views/answers/_new.html.erb
@@ -1,5 +1,6 @@
-<%= form_for answer do |f| %>
-  <%= f.label :content %>
-  <%= f.text_area :content, placeholder: "Your answer" %>
-  <%= f.submit %>
-<% end %>
+<%= form_for Answer.new do |f| %>
+    <%= f.label :content %>
+    <%= f.text_area :content, placeholder: "Your answer" %>
+    <%= f.hidden_field :question_id, value: @question.id %>
+    <%= f.submit %>
+  <% end %>
