--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,16 +15,11 @@
 </div>
 
 <% @answers.each do |answer| %>
-  <%= answer.content %><br>
+<%= link_to answer.content, answer_path(answer) %><br>
 <% end %>
 
 <% if current_user %>
-  <%= form_for Answer.new do |f| %>
-    <%= f.label :content %>
-    <%= f.text_area :content, placeholder: "Your answer" %>
-    <%= f.hidden_field :question_id, value: @question.id %>
-    <%= f.submit %>
-  <% end %>
+  <%= render partial: "answers/new", locals: { question: @question } %>
 <% else %>
   <p>Please log in to answer!</p>
 <% end %>
