--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,2 +1,3 @@
 <%= @answer.content %>
 <%= link_to "edit", edit_answer_path(@answer) %>
+<%= link_to "delete", answer_path(@answer), method: :delete %>
