Got OmniAuth to return email

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,8 @@
 <% content_for :title do %>Technical Interview Questions<% end %>
 <div class="row">
   <div class="small-12 large-12 columns panel">
-    <h1>Techncial Interview Questions</h1>
+    <h1>Technical Interview Questions</h1>
+    <%= link_to "Post a Question", new_question_path, class: "button [tiny small large]" %>
   </div>
 </div>
 <div class="row">
