--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 ----------------------------------------------------------------------------------------------------------------*/
 
 .img-container {
-  width: 1140px;
+  height: 100%;
   margin: 0 auto;
   background: url(http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_52b6b4db7397c_1.JPG) no-repeat center center fixed;
   -moz-background-size: cover;
