Adds ability to delete comments
  * Takes advantage of comment.commentable to get the question_id and route back to question page

--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,3 +1,5 @@
 <% answer.comments.each do |comment| %>
-  <%= comment.content %><br>
+  <%= comment.content %>
+  <%= link_to "delete", comment_path(comment), method: :delete %>
+  <br>
 <% end %>
