--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,3 +37,19 @@
   height: 0;
   width: 0;
 }
+
+.gravatar-nav {
+  width: 46px;
+  height: 46px;
+  display: block;
+}
+
+.gravatar-body {
+  width: 46px;
+  height: 46px;
+  -webkit-border-radius: 23px;
+  -moz-border-radius: 23px;
+  border-radius: 23px;
+  float: right;
+  margin-left: 10px;
+}
