--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,8 +7,14 @@
     <hr>
     <% if current_user %>
       <p>
-        <i class="fa fa-thumbs-up"></i>
+        <% if current_user %>
+          <% if current_user %>
+            <%= link_to kudos_path(question_id: @question.id), class: "fa fa-thumbs-up", method: :post do %>
+            <% end %>
+          <%= @question.kudos.count %>
+        <% end %>
         <i class="fa fa-floppy-o"></i>
+        <% end %>
       </p>
     <% end %>
     <% if current_user %>
