--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for Comment.new do |f| %>
-  <%= f.text_area :content, placeholder: "Your comment ... (Markdown supported)" %>
+  <%= f.text_area :content, placeholder: "Your comment ... (Markdown with fenced codeblocks supported)" %>
   <%= f.hidden_field :question_id, value: @question.id %>
   <%= f.hidden_field :answer_id, value: answer.id %>
   <%= f.submit %>
