--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
+    <%= stylesheet_link_tag    "techtips" %>
+
   </head>
 
   <body>
@@ -44,10 +46,7 @@
             <a href="#">Categories</a>
             <ul class="dropdown">
               <li><%= link_to "All Questions", questions_path %></li>
-              <% @categories = Category.all %>
-              <% @categories.each do |category| %>
-                <li><%= link_to category.content, "#" %></li>
-              <% end %>
+              <li><%= link_to "Unanswered Questions", "#" %></li>
             </ul>
           </li>
         </ul>
@@ -78,14 +77,7 @@
   </div>
     <!-- <div class="notice"><%= notice %></div>
     <div class="alert"><%= alert %></div> -->
-    <% flash.each do |name, msg| %>
-    <div class="row">
-      <div data-alert class="alert-box info small-12 large-12 columns">
-      <%= content_tag :div, msg, id: "flash_#{name}" %>
-      <a href="#" class="close">&times;</a>
-      </div>
-    </div>
-    <% end %>
+
 
     <%= yield %>
 
