--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,5 +1,11 @@
-
 <% content_for :title do %>Update Question<% end %>
+<style>
+  h1 {
+    margin-top: 0;
+    padding-top: 0;
+    font-family: 'Candal', sans-serif;
+  }
+</style>
 <div class="row">
   <div class="small-12 large-12 columns panel">
     <h1>Post a Question</h1>
