--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,14 @@
 <% content_for :title do %>Technical Interview Questions<% end %>
+<style>
+  h1 {
+    margin-top: 0;
+    padding-top: 0;
+    font-family: 'Candal', sans-serif;
+  }
+</style>
 <div class="row">
   <div class="small-12 large-12 columns panel">
+
     <h1>Technical Interview Questions</h1>
     <%= link_to "Post a Question", new_question_path, class: "button [tiny small large]" %>
   </div>
