--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,11 @@
 <% content_for :title do %>Add a technical interview question<% end %>
+<style>
+  h1 {
+    margin-top: 0;
+    padding-top: 0;
+    font-family: 'Candal', sans-serif;
+  }
+</style>
 <div class="row">
   <div class="small-12 large-12 columns panel">
     <h1>Post a Question</h1>
@@ -10,7 +17,7 @@
       </div>
       <div class="row">
         <div class="small-12 large-12 columns">
-          <%= f.text_area :content, placeholder: "Question Body ... (Markdown supported)", size: "60x12" %>
+          <%= f.text_area :content, placeholder: "Question Body ... (Markdown with fenced code blocks supported)", size: "60x12" %>
         </div>
       </div>
       <div class="row">
