--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,14 @@
 <% content_for :title do %><%= @question.title %><% end %>
-
+<style>
+  h1 {
+    margin-top: 0;
+    padding-top: 0;
+    font-family: 'Candal', sans-serif;
+  }
+</style>
 <div class="row">
   <div class="small-12 large-12 columns panel">
+  <%= render partial: "layouts/alerts" %>
     <h1><%= @question.title %></h1>
     <p><%= markdown @question.content %></p>
     <hr>
@@ -19,16 +26,16 @@
     <% end %>
     <% if current_user %>
       <% if current_user.id == @question.user.id %>
-      <p class="text-right"><%= link_to "edit", edit_question_path(@question), class: "button [tiny small large]" %>
-        <%= link_to "delete", question_path(@question), method: :delete, class: "button [tiny small large]" %></p>
+      <p class="text-right"><%= link_to "edit", edit_question_path(@question), class: "button [tiny]" %>
+        <%= link_to "delete", question_path(@question), method: :delete, class: "button [tiny]" %></p>
       <% end %>
     <% end %>
 
     <div class="gravatar-body"><%= gravatar_for(@question.user) %></div>
     <% if @question.user.provider == "github" %>
-      <p class="text-right">Posted by: <%= link_to @question.user.name, "https://github.com/#{@question.user.name}" %><br>
+      <p class="text-right">Posted by: <i class="fa fa-github-square"></i> <%= link_to @question.user.name, "https://github.com/#{@question.user.name}" %><br>
     <% else %>
-      <p class="text-right">Posted by: <%= link_to @question.user.name, @question.user.url %><br>
+      <p class="text-right">Posted by: <i class="fa fa-linkedin-square"></i> <%= link_to @question.user.name, @question.user.url %><br>
     <% end %>
     <%= time_ago_in_words(@question.created_at) %> ago</p>
   </div>
@@ -51,9 +58,9 @@
       <p><%= markdown answer.content %></p>
       <div class="gravatar-body"><%= gravatar_for(answer.user) %></div>
       <% if answer.user.provider == "github" %>
-        <p class="text-right">Posted by: <%= link_to answer.user.name, "https://github.com/#{answer.user.name}" %><br>
+        <p class="text-right">Posted by: <i class="fa fa-github-square"></i> <%= link_to answer.user.name, "https://github.com/#{answer.user.name}" %><br>
       <% else %>
-        <p class="text-right">Posted by: <%= answer.user.name %><br>
+        <p class="text-right">Posted by: <i class="fa fa-linkedin-square"></i> <%= link_to answer.user.name, answer.user.url %><br>
       <% end %>
       <%= time_ago_in_words(answer.created_at) %> ago</p>
     <%= render partial: "comments/new", locals: { question: @question, answer: answer } %>
