--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -9,6 +9,7 @@
 <div class="row">
   <div class="small-12 large-12 columns panel">
   <%= render partial: "layouts/alerts" %>
+    <p>
     <h1><%= @question.title %></h1>
     <p><%= markdown @question.content %></p>
     <hr>
@@ -26,8 +27,8 @@
     <% end %>
     <% if current_user %>
       <% if current_user.id == @question.user.id %>
-      <p class="text-right"><%= link_to "edit", edit_question_path(@question), class: "button [tiny]" %>
-        <%= link_to "delete", question_path(@question), method: :delete, class: "button [tiny]" %></p>
+      <p class="text-right"><%= link_to "edit", edit_question_path(@question), class: "button [tiny small large]" %>
+        <%= link_to "delete", question_path(@question), method: :delete, class: "button [tiny small large]" %></p>
       <% end %>
     <% end %>
 
