--- a/app/views/comments/_show.html.erb
+++ b/app/views/comments/_show.html.erb
@@ -1,8 +1,10 @@
 <% answer.comments.each do |comment| %> 
   <hr>
   <p><%= markdown comment.content %></p>
-  <% if current_user.id == comment.user_id %>
-    <p><%= link_to "delete", comment_path(comment), method: :delete %></p>
+  <% if current_user %>
+    <% if current_user.id == comment.user_id %>
+      <p><%= link_to "delete", comment_path(comment), method: :delete %></p>
+    <% end %>
   <% end %>
   <% user = User.find(comment.commentable.user_id) %>
   <div class="gravatar-body"><%= gravatar_for(user) %></div>
