--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -10,11 +10,10 @@
     font-family: 'Candal', sans-serif;
   }
 </style>
-
 <div class="small-12 large-12 img-container">
 <%= render partial: "layouts/alerts" %>
   <div class="row">
-    <div class="small-6 large-6 columns">
+    <div class="large-6 columns">
     <h5>Welcome to</h5>
     <h1>Tech Interview Tips</h1>
     <p>This is the place to learn ways to answer technical interview questions, and the place to share your knowledge with others.</p>
