--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -21,4 +21,7 @@
     <h4><%= link_to question.title, question_path(question) %></h4>
     </div>
   <% end %>
+  <div class="small-12 large-12 columns panel">
+    <%= will_paginate @questions %>
+  </div>
 </div>
