--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -8,16 +8,11 @@
 </style>
 <div class="row">
   <div class="small-12 large-12 columns panel">
-    <h1>Post a Question</h1>
+    <h1>Update Question</h1>
      <%= form_for @question do |f| %>
      <div class="row">
        <div class="small-12 large-12 columns">
-          <%= f.text_field :title %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-12 large-12 columns">
-          <%= f.text_area :content, size: "60x12" %>
+          <%= f.text_field :title, size: "60x12" %>
         </div>
       </div>
       <div class="row">
