Added Favorites controller and link

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,7 +20,10 @@
             <% end %>
           <%= @question.kudos.count %>
         <% end %>
-        <i class="fa fa-floppy-o"></i>
+
+        <%= link_to favorites_path(question_id: @question.id), class: "fa fa-floppy-o", method: :put, id: "save-question", remote: true do %>
+        <% end %>
+          
         <% end %>
       </p>
     <% end %>
