--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -12,21 +12,21 @@
     <p>
     <h1><%= @question.title %></h1>
     <hr>
+
     <% if current_user %>
       <p>
-        <% if current_user %>
-          <% if current_user %>
-            <%= link_to kudos_path(question_id: @question.id), class: "fa fa-thumbs-up", method: :post do %>
-            <% end %>
-          <%= @question.kudos.count %>
-        <% end %>
-
+        <%= link_to kudos_path(question_id: @question.id), class: "fa fa-thumbs-up", method: :post do %>
+          <% end %> : <%= @question.kudos.count %> 
         <%= link_to favorites_path(question_id: @question.id), class: "fa fa-floppy-o", method: :put, id: "save-question", remote: true do %>
-        <% end %>
-          
-        <% end %>
+          <% end %> : <%= @question.favorites.count %>
+      </p>
+    <% else %>
+      <p>
+        <i class="fa fa-thumbs-up grey-out"></i>: <%= @question.kudos.count %> 
+        <i class="fa fa-floppy-o grey-out"></i>: <%= @question.favorites.count %>
       </p>
     <% end %>
+
     <% if current_user %>
       <% if current_user.id == @question.user.id %>
       <p class="text-right"><%= link_to "edit", edit_question_path(@question), class: "button [tiny small large]" %>
