--- a/app/assets/stylesheets/techtips.css
+++ b/app/assets/stylesheets/techtips.css
@@ -7,7 +7,7 @@
 .img-container {
   height: 100%;
   margin: 0 auto;
-  background: url(http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_52b6b4db7397c_1.JPG) no-repeat center center fixed;
+  background: url(https://s3-us-west-1.amazonaws.com/tech-tips/unsplash_52b6b4db7397c_1.JPG) no-repeat center center fixed;
   -moz-background-size: cover;
   -webkit-background-size: cover;
   -o-background-size: cover;
@@ -43,7 +43,7 @@
 }
 
 body {
-  background-image:url('mochaGrunge.png') !important;
+  background-image:url('https://s3-us-west-1.amazonaws.com/tech-tips/mochaGrunge.png') !important;
   background-repeat:repeat !important;
 }
 
