--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -13,7 +13,8 @@
     <% @questions.each do |question| %>
       <hr>
       <h4><%= link_to question.title, question_path(question) %></h4>
-      <span class="label"><%= question.answers.count %> answers</span> <span class="label"><%= question.kudos.count %> kudos</span>
+      <span class="label"><%= question.answers.count %> answers</span> <span class="label"><%= question.kudos.count %> kudos</span> <span class="label"><%= question.favorites.count %> saves</span>
+
     <% end %>
     <%= will_paginate @questions, renderer: FoundationPagination::Rails %>
   </div>
