--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,6 +22,7 @@
       </div>
       <% end %>
     <% end %>
+    <h5>Save questions here to study later</h5>
     <!-- <h3>Your Questions</h3>
     <% if current_user.id == @user.id %>
       <% @user.questions.each do |question| %>
