adds save icon to interview prep page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
       </div>
       <% end %>
     <% end %>
-    <h5>Save questions here to study later</h5>
+    <i class="fa fa-floppy-o grey-out"></i>
     <!-- <h3>Your Questions</h3>
     <% if current_user.id == @user.id %>
       <% @user.questions.each do |question| %>
