Added 3 Search Queries as drop down Categories
Floated icons to the left to take up less space.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,9 @@
             <a href="#">Categories</a>
             <ul class="dropdown">
               <li><%= link_to "All Questions", questions_path %></li>
+              <li><a href="http://www.techinterview.tips/questions?search=Ruby">Ruby</a></li>
+              <li><a href="http://www.techinterview.tips/questions?search=Javascript">Javascript</a></li>
+              <li><a href="http://www.techinterview.tips/questions?search=JQuery">JQuery</a></li>
             </ul>
           </li>
         </ul>
