--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -12,6 +12,7 @@
     <p>
     <h1><%= @question.title %></h1>
     <hr>
+    <div class="left">
 
     <% if current_user %>
       <%= link_to kudos_path(question_id: @question.id), title: "Give this question a thumbs-up.", class: "fa fa-thumbs-up", method: :post do %>
@@ -26,7 +27,7 @@
       <i class="fa fa-floppy-o grey-out"></i><br>
       <%= @question.favorites.count %><br>
     <% end %>
-
+</div>
     <% if current_user %>
       <% if current_user.id == @question.user.id %>
       <p class="text-right"><%= link_to "edit", edit_question_path(@question), class: "button [tiny small large]" %>
