adds ability to see recent actions on profile page for all type of activities

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,8 +23,14 @@
       <% end %>
     <% end %>
     <i class="fa fa-floppy-o grey-out"></i>
-    <% Action.where(user_id: current_user.id).each do |action| %>
-      <li><%= action.content + " " %><%= link_to action.actionable.title, question_path(action.actionable.title) %></li>
+    <% Action.where(user_id: current_user.id, actionable_type: "Question").each do |action| %>
+      <li><%= action.content + " " %><%= action.actionable.title %></li>
+    <% end %>
+    <% Action.where(user_id: current_user.id, actionable_type: "Answer").each do |action| %>
+      <li><%= action.content + " " %><%= action.actionable.content %></li>
+    <% end %>
+    <% Action.where(user_id: current_user.id, actionable_type: "Comment").each do |action| %>
+      <li><%= action.content + " " %><%= action.actionable.content %></li>
     <% end %>
   </div>
 </div>
