--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -12,7 +12,7 @@
      <%= form_for @question do |f| %>
      <div class="row">
        <div class="small-12 large-12 columns">
-          <%= f.text_field :title, placeholder: "Question ...", size: "60x12" %>
+          <%= f.text_area :title, placeholder: "Question ...", size: "60x12" %>
         </div>
       </div>
       <div class="row">
