--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -15,17 +15,16 @@
     <div class="left">
 
     <% if current_user %>
-      <%= link_to kudos_path(question_id: @question.id), title: "Give this question a thumbs-up.", class: "fa fa-thumbs-up", method: :post do %>
-        <% end %><br>
+      <span data-tooltip class="has-tip" title="Give this question a thumbs-up."><%= link_to kudos_path(question_id: @question.id), class: "fa fa-thumbs-up", method: :post do %>
+        <% end %></span><br>
       <%= @question.kudos.count %><br><br>
-      <%= link_to favorites_path(question_id: @question.id), title: "Save this question to your study hall.", class: "fa fa-floppy-o", method: :post do %>
-        <% end %><br>
+      <span data-tooltip class="has-tip" title="Save this question to your Interview Prep area."><%= link_to favorites_path(question_id: @question.id), class: "fa fa-floppy-o", method: :post do %>
+        <% end %></span><br>
       <%= @question.favorites.count %>
     <% else %>
-      <i class="fa fa-thumbs-up grey-out"></i><br>
+      <span data-tooltip class="has-tip" title="Sign-in to give this question a thumbs-up."><%= @question.favorites.count %></span>
       <%= @question.kudos.count %><br><br>
-      <i class="fa fa-floppy-o grey-out"></i><br>
-      <%= @question.favorites.count %><br>
+      <span data-tooltip class="has-tip" title="Sign in to save this question to your interview prep area."><i class="fa fa-floppy-o grey-out"></i></span><br>
     <% end %>
 </div>
     <% if current_user %>
