Added some styling to front page

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -9,11 +9,17 @@
     padding-top: 0;
     font-family: 'Candal', sans-serif;
   }
+
+  .lighten-up {
+    padding: 20px;
+    background-color: rgba(255, 255, 255, .5);
+    text-align: center;
+  }
 </style>
 <div class="small-12 large-12 img-container">
 <%= render partial: "layouts/alerts" %>
   <div class="row">
-    <div class="large-6 columns">
+    <div class="large-4 columns lighten-up">
     <h5>Welcome to</h5>
     <h1>Tech Interview Tips</h1>
     <p>This is the place to learn ways to answer technical interview questions, and the place to share your knowledge with others.</p>
